Test for new UseLombokCheck